--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-  <string name="app_name">Maha Perivaya</string>
+  <string name="app_name">Periyava Radio</string>
   <string name="item_1">First Item</string>
   <string name="item_2">Second Item</string>
   <string name="cd_logo">logo</string>
